v0.3.0 - XXX, xxx
  - actions are defined in the actions/ folder
  - ActionSprite and SpriteGroup added in sprite.py
  - Added DefaultHandler:
     ESCAPE: director.pop
     MOD_ACCEL + f: Toggles Fullscreen
     MOD_ACCEL + p: Toggles Pause
     MOD_ACCEL + w: Toggles wireframe mode
     MOD_ACCEL + s: Takes a screenshot of the current window
  - alpha blending enabled by default. 
    use director.set_alpha_bleding(True|False) to change.
  - Actions: Goto renamed to MoveTo and Move renamed to MoveBy
  - Actions: Scale renamed to ScaleBy. Added ScaleTo
  - Actions: Rotate renamed to RotateBy. Added RotateTo
  - Added compositions and actions to scenes and layers
  - Added setup.py and setup.cfg contributed by David Eyk
  - Added Mesh effects
    
v0.2.0 - March, 21th 2008
  - Director: uses the new pyglet 1.1 loop
  - Director: doesn't have the step() method. Uses on_draw() instead.
  - Director: enable_alpha_blending() is not called automatically
  - Scene: does not have the step() method. Uses on_draw() instead.
  - Layer: step() is called only when it is enabled with Layer.enable_step()
  - Layer: Removed AnimationLayer. No longer necessary.
  - Layer: uses Batch.draw() to draw objects. Propagates the message draw() to the objects it contains.
  - ActionSprite: is a subclass of pyglet.sprite.Sprite
  - ActionSprite: Move() and Goto() uses (x,y) instead of (x,y,0)
  - ActionSprite: removed Animate / Animation (part of pyglet.sprite.Sprite )
  - ActionSprite: uses pyglet.clock.schedule() to generate a ticker.
  - ActionSprite: renamed RepeatMode to RestartMode
  - ActionSprite: Spawn(a,b) + c works as expected
  - Effect: uses draw() and not step() to draw the layer
  - Transition: added enable/disable_step(). Uses draw() to draw subscenes and not step()
  - test/* and samples/* uses the resource.Text and not font.Text
  - test/* added multiline=True in fonts


v0.1.2 - March, 18th 2008
  - ActionSprite: Fixed FadeIn